# chess-game-stockfish

./: README.md  __init__.py  app.py  index.html  pyproject.toml
css/: style.css
js/: logic.js
utils/: get_abs_notation.py
